--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "watch": "nodemon server.js",
     "seed": "node seeders/seed.js"
   },
+  "author": "rlgerma92",
+  "license": "WTFPL",
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.3.16",
     "morgan": "^1.9.1",
-    "nodemon": "2.0.2"
-  },
-  "author": "rlgerma92",
-  "license": "WTFPL"
+    "nodemon": "2.0.2",
+    "typography": "^0.16.19"
+  }
 }
